--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <header>
     <!-- Logo: assets/logo.png qo'ying -->
-    <img id="logo" src="assets/logo.png" alt="Roshidon FM logo">
+    <img id="logo" src="logo.png" alt="Roshidon FM logo">
     <h1>Roshidon FM</h1>
     <nav>
       <a class="link" href="index.html">Jonli</a>
