--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
       <div style="margin-top:12px">
         <h4>Aloqa</h4>
-        <p style="margin:4px 0">Тел: <a href="tel:+998 55 801-55-09" style="color:#9ff">+998 55 801-55-09</a></p>
+        <p style="margin:4px 0">Тел: <a href="tel:+998558015509" style="color:#9ff">+998 55 801-55-09</a></p>
         <p style="margin:4px 0">Email: <a href="aloqa@roshidonfm.uz" style="color:#9ff">aloqa@roshidonfm.uz</a></p>
       </div>
     </aside>
